# fdtd3d

./: .gitignore  .travis.yml  CMakeLists.txt  CudaGlobalKernels.cu  Doxyfile  README.md  arm-clang-toolchain.cmake  arm-gcc-toolchain.cmake  arm64-clang-toolchain.cmake  arm64-gcc-toolchain.cmake  create-debian-rootfs.sh  create-ubuntu-rootfs.sh  fdtd3dbench.html  fdtd3dbench.js  fdtd3dbench.wasm  index.html  install-cmake.sh  invoke.cu  invoke.h  loongarch64-clang-toolchain.cmake  loongarch64-gcc-toolchain.cmake  main.cpp  params.json  pointwise source  ppc64el-clang-toolchain.cmake  ppc64el-gcc-toolchain.cmake  riscv64-clang-toolchain.cmake  riscv64-gcc-toolchain.cmake  s390x-clang-toolchain.cmake  s390x-gcc-toolchain.cmake  ultimateFDTD3D.cpp
Coordinate/: GridCoordinate1D.h  GridCoordinate2D.h  GridCoordinate3D.h
Cuda/: CMakeLists.txt  CudaDefines.h  CudaGlobalKernels.cu  CudaGlobalKernels.h  CudaInterface.cu  CudaInterface.h  CudaKernel.cu  CudaKernelInterface.h
Docs/: Build.md  CrossBuild.md  Design.md  Input-Output.md  Launch.md  Testing.md
Dumper/: BMPDumper.cpp  BMPDumper.h  CMakeLists.txt  Dumper.h
File-Management/: BMPHelper.cpp  BMPHelper.h  CMakeLists.txt  Commons.cpp  Commons.h
File-Management/Dumper/: BMPDumper.cpp  BMPDumper.h  DATDumper.cpp  DATDumper.h  Dumper.h  TXTDumper.h
File-Management/Loader/: BMPLoader.cpp  BMPLoader.h  DATLoader.cpp  DATLoader.h  Loader.h
Source/: CMakeLists.txt  main.cpp  main.cu
Source/Coordinate/: CMakeLists.txt  GridCoordinate.cpp  GridCoordinate1D.h  GridCoordinate2D.h  GridCoordinate3D.h
Source/Cuda/: CMakeLists.txt  CudaDefines.h  CudaGlobalKernels.cu  CudaGlobalKernels.h  CudaInterface.cu  CudaInterface.h
Source/File-Management/: BMPHelper.cpp  BMPHelper.h  CMakeLists.txt  Commons.cpp  Commons.h
Source/File-Management/Dumper/: BMPDumper.cpp  BMPDumper.h  CMakeLists.txt  DATDumper.h  Dumper.h  TXTDumper.cpp  TXTDumper.h
Source/File-Management/Loader/: BMPLoader.cpp  BMPLoader.h  CMakeLists.txt  DATLoader.h  Loader.h  TXTLoader.cpp  TXTLoader.h
Source/Grid/: BufferPosition.inc.h  CMakeLists.txt  Clock.h  CudaGrid.cu  CudaGrid.h  DynamicGrid.h  Grid.cpp  Grid.cu  Grid.h  GridInterface.h  Parallel.h  ParallelBuffer2D.cpp  ParallelBuffer3D.cpp  ParallelGrid.cpp  ParallelGrid.h  ParallelGrid1D.cpp  ParallelGrid2D.cpp  ParallelGrid3D.cpp  ParallelGridCore.cpp  ParallelGridCore.h  ParallelGridCoreDynamic.cpp  ParallelGridDynamic.cpp  ParallelGridGroup.cpp  ParallelGridGroup.h
Source/Helpers/: Assert.cpp  Assert.cu  Assert.h  CMakeLists.txt  CudaInclude.h  PAssert.cpp  PAssert.h
Source/Kernels/: CMakeLists.txt  Complex.h  FieldPoint.cpp  FieldPoint.h  FieldValue.cpp  FieldValue.cu  FieldValue.h  Kernels.cpp  Kernels.h
Source/Layout/: Approximation.cpp  Approximation.cu  Approximation.h  CMakeLists.txt  GridLayout.h  ParallelYeeGridLayout.cpp  ParallelYeeGridLayout.h  ParallelYeeGridLayout.template.h  YeeGridLayout.cpp  YeeGridLayout.cu  YeeGridLayout.h
Source/Physics/: CMakeLists.txt  PhysicsConst.h
Source/Scheme/: CMakeLists.txt  CallBack.cpp  CallBack.cu  CallBack.h  Callbacks.inc.h  Grids.inc.h  Grids2.inc.h  InternalScheme.cpp  InternalScheme.cpp.inc  InternalScheme.cu  InternalScheme.h  InternalScheme.inc.cpp  InternalScheme.inc.h  InternalScheme.specific.h  InternalScheme.template.h  InternalScheme.template.inc.h  InternalScheme.template.specific.h  InternalSchemeHelper.cpp  InternalSchemeHelper.cu  InternalSchemeHelper.h  Scheme.cpp  Scheme.cu  Scheme.h  Scheme.inc.h  Scheme.template.h  Scheme3D.cpp  Scheme3D.h  SchemeHelper.cpp  SchemeHelper.cu  SchemeHelper.h  SchemeTEz.cpp  SchemeTEz.h  SchemeTMz.cpp  SchemeTMz.h
Source/Settings/: CMakeLists.txt  Settings.cpp  Settings.cu  Settings.h  Settings.inc  Settings.inc.h
Source/Tools/: CMakeLists.txt  README.md  converter.cpp
Source/UnitTests/: CMakeLists.txt  perf-test-parallel-grid.cpp  unit-test-approximation.cpp  unit-test-clock.cpp  unit-test-complex.cpp  unit-test-coordinate.cpp  unit-test-cuda-grid.cu  unit-test-dumpers-loaders.cpp  unit-test-grid.cpp  unit-test-internalscheme.cpp  unit-test-internalscheme.cu  unit-test-layout.cpp  unit-test-parallel-grid.cpp  unit-test-settings.cpp
Tests/: CMakeLists.txt  README.md  build-base.sh  cmp_norm.sh  perf-test-parallel-grid.cpp  run-test-gpu.sh  run-test.sh  run-testsuite.sh  unit-test-approximation.cpp  unit-test-clock.cpp  unit-test-complex.cpp  unit-test-coordinate.cpp  unit-test-cuda-grid.cu  unit-test-dumpers-loaders.cpp  unit-test-grid.cpp  unit-test-internalscheme.cpp  unit-test-internalscheme.cu  unit-test-layout.cpp  unit-test-parallel-grid.cpp  unit-test-settings.cpp
Tests/suite/t1.1/: README.md  build.sh  cleanup.sh  run.sh
Tests/suite/t1.2/: build.sh  exact.cpp  run.sh
Tests/suite/t2.1/: run.sh
Tests/suite/t2.2/: README.md  build.sh  run.sh
Tests/suite/t2.3/: build.sh  run.sh
Tests/suite/t3/: README.md  build.sh  cleanup.sh  run.sh
Tests/suite/t4.1/: README.md  build.sh  run.sh
Tests/suite/t4.2/: build.sh  run.sh
Tests/suite/t4.3/: README.md  build.sh  run.sh
Tests/suite/t5/: build.sh  run.sh
Tests/suite/t6.1/: README.md  build.sh  run.sh
Tests/suite/t6.10/: build.sh  cleanup.sh  run.sh
Tests/suite/t6.11/: README.md  build.sh  run.sh
Tests/suite/t6.12/: README.md  build.sh  run.sh
Tests/suite/t6.13/: README.md  build.sh  run.sh
Tests/suite/t6.2/: build.sh  run.sh
Tests/suite/t6.3/: README.md  build.sh  run.sh
Tests/suite/t6.4/: README.md  build.sh  run.sh
Tests/suite/t6.5/: build.sh  run.sh
Tests/suite/t6.6/: build.sh  run.sh
Tests/suite/t6.7/: README.md  build.sh  run.sh
Tests/suite/t6.8/: README.md  build.sh  run.sh
Tests/suite/t6.9/: build.sh  run.sh
Tests/suite/t7.1/: README.md  build.sh  run.sh  sphere1D_eps4.txt  sphere1D_vacuum.txt
Tests/suite/t7.2/: README.md  build.sh  cleanup.sh  run.sh
Tests/suite/t7.3/: build.sh  run.sh
Tests/suite/t7.4/: build.sh  run.sh
Tests/suite/t7.5/: README.md  build.sh  run.sh
Tests/suite/t7.6/: build.sh  run.sh
Tests/suite/t8/: build.sh  cleanup.sh  run.sh  vacuum2D_planewave_TMz.txt
(+688 files in other folders)
